--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -3,7 +3,7 @@
 
 <SideNavBar />
 
-<div class="mt-1 mb-5" role="main">
+<div class="mt-1 mb-5 pb-5 ml-254" role="main">
   {{outlet}}
 </div>
 <Footer />
