--- a/frontend/app/templates/components/account-show.hbs
+++ b/frontend/app/templates/components/account-show.hbs
@@ -5,7 +5,7 @@
   <FileEntryForm @class="modal_file_entry" @account={{@account}} @title={{t "file_entries.new.title"}} @onAbort={{this.toggleFileEntryNew}}/>
 {{/if}}
 
-<div class="container mt-3 ml-254">
+<div class="container mt-3">
   <div class="row mb-3">
     <div class="col">
       <a id="account-show-back" href="#" {{on "click" this.transitionBack}}>
