Team and folder show tweaks

--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -154,6 +154,12 @@ li a {
   display: inline;
 }
 
+.icon-medium-button {
+  width: 24px !important;
+  height: 24px !important;
+  display: inline;
+}
+
 .ml-254 {
   margin-left: 254px !important;
 }
