--- a/frontend/app/templates/components/folder-show.hbs
+++ b/frontend/app/templates/components/folder-show.hbs
@@ -5,7 +5,10 @@
   <div class="col" role="button" {{on "click" this.collapse}}>
     <h4 class="d-inline">{{@folder.name}}</h4>
   </div>
-  <div class="col-auto d-inline">
+  <div class="col-sm-1 d-flex justify-content-between align-items-center">
+    <DeleteWithConfirmation @record={{@folder}} @didDelete={{this.refreshRoute}}>
+      <img class="icon-button d-inline" src="/ember/assets/images/delete.svg" alt="delete">
+    </DeleteWithConfirmation>
     <a role="button" {{on "click" this.toggleFolderEdit}}>
       <img class="icon-button folder-edit-icon" src="/ember/assets/images/edit.svg" alt="edit">
     </a>
