Increase notification duration to 4 seconds

--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -1,4 +1,4 @@
-<EmberNotify @messageStyle="bootstrap" />
+<EmberNotify @messageStyle="bootstrap" @closeAfter={{4000}} />
 <NavBar />
 
 <SideNavBar />
