--- a/frontend/app/templates/index.hbs
+++ b/frontend/app/templates/index.hbs
@@ -1,6 +1,11 @@
-<div class="container ml-254 pl-0">
-  <h3>{{t "session.newuser.title"}}!</h3>
+<div class="container py-2">
+  <div class="row py-2 bg-white border border-darker rounded my-4">
+    <div class="col">
+      <h3>{{t "session.newuser.title"}}!</h3>
 
-  <h4>{{t "select_team"}}</h4>
-  <img src="/ember/assets/images/cryptopussy_without_text.svg" alt="logo">
+      <p>{{t "select_team"}}</p>
+
+
+    </div>
+  </div>
 </div>
