--- a/frontend/app/templates/components/validation-errors-list.hbs
+++ b/frontend/app/templates/components/validation-errors-list.hbs
@@ -1,5 +1,5 @@
 <div class="validation-errors">
   {{#each @errors as |error|}}
-    <div>{{error}}.</div>
+    <div>{{t (validation-error-key error)}}.</div>
   {{/each}}
 </div>
