--- a/frontend/app/templates/components/folder-form.hbs
+++ b/frontend/app/templates/components/folder-form.hbs
@@ -13,7 +13,7 @@
                               @name="foldername" class={{if this.changeset.error.name.validation
                                                              "invalid-input-name"}}
                               id="foldername" @tabindex="1"
-                              @customError={{this.changeset.error.name.validation}} />
+                              @customError={{t (validation-error-key this.changeset.error.name.validation)}} />
               </form.group>
             </div>
           </div>
@@ -24,7 +24,8 @@
               <div class="form-group col-md-12" id="team-power-select">
                 <form.element @label={{t "team"}} @controlType="power-select"
                               @placeholder={{t "accounts.edit.team_placeholder"}} @disabled={{not this.isNewRecord}}
-                              @options={{this.assignableTeams}} @value={{this.changeset.team}} as |el|>
+                              @options={{this.assignableTeams}} @value={{this.changeset.team}}
+                              @customError={{t (validation-error-key this.changeset.error.team.validation)}} as |el|>
                   <el.control class={{if this.changeset.error.team.validation "invalid-input-ps"}} @renderInPlace={{true}} @onChange={{this.setSelectedTeam}} as |team|>
                     {{team.name}}
                   </el.control>
@@ -38,7 +39,7 @@
             <form.element @label={{t "description"}} @property="description" @controlType="textarea"
                             id="description" class="{{if
                       this.changeset.error.description.validation "invalid-input"}} vertical-resize"
-                            @tabindex="7" @customError={{this.changeset.error.description.validation}}/>
+                            @tabindex="7" @customError={{t (validation-error-key this.changeset.error.description.validation)}}/>
           </form.group>
         </div>
       </BsForm>
