Fix teams page e2e

--- a/frontend/app/templates/components/folder-show.hbs
+++ b/frontend/app/templates/components/folder-show.hbs
@@ -12,7 +12,7 @@
     <a role="button" {{on "click" this.toggleFolderEdit}}>
       <img class="icon-button folder-edit-icon" src="/ember/assets/images/edit.svg" alt="edit">
     </a>
-    <span role="button" {{on "click" this.collapse}}>
+    <span role="button" name="folder-collapse" {{on "click" this.collapse}}>
       {{#if this.collapsed}}
         <img class="icon-big-button float-right" src="/ember/assets/images/angle-left.svg" alt="<">
       {{else}}
