--- a/frontend/app/templates/components/team-show.hbs
+++ b/frontend/app/templates/components/team-show.hbs
@@ -25,7 +25,7 @@
         </span>
       </div>
       <div class="col-auto ml-0 pl-0 my-auto">
-        <span role="button" {{on "click" this.collapse}}>
+        <span role="button" name="team-collapse" {{on "click" this.collapse}}>
           {{#if this.collapsed}}
             <img class="icon-big-button float-right" src="/ember/assets/images/angle-left.svg" alt="<">
           {{else}}
